fix white border & overflow hidden

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
 body{
   margin: 0;
+  background: #343535;
+  overflow: hidden;
 }
